1999-08-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m ([VarProbe
	-probeAsString:Buffer:withFullPrecision:]): Use a display name if
	available.  Don't use getInstanceName.

	* SwarmObject.[hm], objectbase.h ([SwarmObject -getInstanceName]): 
	Remove.

	* ActivityControl.[hm], objectbase.h ([ActivityControl
	-getInstanceName]): Remove.

	* VarProbe.m ([VarProbe -setProbedVariable:]): Include javavars.h.
	(java_probe_as_string): 
	(_TYPEP, TYPEP, _GETSTROBJECT, GETSTROBJECT, _GETVALUE, GETVALUE): 
	New macros.
	(java_probe_as_{int,double,string}): Use them.

1999-08-09  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h (EmptyProbeMap): Add +create:forClass: convenience
	create message to protocol.

	* EmptyProbeMap.[hm] ([EmptyProbeMap +create:forClass:]): New
	convenience factory method for creating an EmptyProbeMap, but with
	the appropriate class set.  Make class conform to EmptyProbeMap
	protocol.  Add all appropriate phase tags.

1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m: Accomodate c_* renames in defobj/directory.m throughout.

1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m ([VarProbe -probeAsString:Buffer:withFullPrecision:],
	[VarProbe -setData:ToString:]): If long and long long are the
	same size, don't use LLFMT.

	* swarm_rts_routines.m (skip_typespec): Add case for long double.

	* MessageProbe.m ([MessageProbe -setArg:ToString:], [MessageProbe
	-doubleDynamicCallOn:], [MessageProbe -longDynamicCallOn:]): Add
	support for [unsigned] long long and long double.

	* VarProbe.m ([VarProbe -createEnd], probe_as_int,
	probe_as_double, [VarProbe
	-probeAsString:Buffer:withFullPrecision:], [VarProbe
	-setData:To:], [VarProbe -setData:ToString:]): Add support
	for [unsigned] long long and long double.

1999-08-08  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h (ActivityControl): Move -attachToActivity: to USING
	phase, doesn't need to be a CREATING phase method.
